Force vertical scroll bar to avoid layout jump.
git-svn-id: svn+ssh://rubyforge.org/var/svn/redmine/trunk@4552 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,4 @@
+html {overflow-y:scroll;}
 body { font-family: Verdana, sans-serif; font-size: 12px; color:#484848; margin: 0; padding: 0; min-width: 900px; }
 
 h1, h2, h3, h4 { font-family: "Trebuchet MS", Verdana, sans-serif;}
